VALID_DESTINATIONS -> validDestinations